// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Pagination render buttons Pagination correctly 1`] = `
<div
  class=
      ms-Pagination-container
      {
        align-items: center;
        display: flex;
        flex-direction: column;
        list-style: none;
      }
>
  <div
    role="radiogroup"
  >
    <div
      class=
          ms-TooltipHost
          {
            display: inline;
          }
      role="none"
    >
      <button
        aria-disabled="true"
        aria-label="first page"
        class=
            ms-Button
            ms-Button--icon
            is-disabled
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              border-color: #f3f2f1;
              border-radius: 2px;
              border: none;
              box-sizing: border-box;
              color: #c8c6c4;
              cursor: default;
              display: inline-flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 32px;
              justify-content: center;
              outline: transparent;
              padding-bottom: 0;
              padding-left: 4px;
              padding-right: 4px;
              padding-top: 0;
              position: relative;
              text-align: center;
              text-decoration: none;
              user-select: none;
              width: 32px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            :host(.ms-Fabric--isFocusVisible) &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > span {
              left: 0px;
              position: relative;
              top: 0px;
            }
            &:hover {
              outline: 0px;
            }
            &:focus {
              outline: 0px;
            }
        data-is-focusable="false"
        disabled=""
        type="button"
      >
        <span
          class=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden="true"
            class=
                ms-Icon
                ms-Button-icon
                {
                  display: inline-block;
                  text-decoration: inherit;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons-1";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  color: #a19f9d;
                  flex-shrink: 0;
                  font-size: 16px;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0;
                  margin-left: 4px;
                  margin-right: 4px;
                  margin-top: 0;
                  text-align: center;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                  color: GrayText;
                }
            data-icon-name="Previous"
            style="font-family: \\"FabricMDL2Icons-1\\";"
          >
            
          </i>
        </span>
      </button>
      <div
        hidden=""
        id="tooltip0"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      >
        first page
      </div>
    </div>
    <div
      class=
          ms-TooltipHost
          {
            display: inline;
          }
      role="none"
    >
      <button
        aria-disabled="true"
        aria-label="previous page"
        class=
            ms-Button
            ms-Button--icon
            is-disabled
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              border-color: #f3f2f1;
              border-radius: 2px;
              border: none;
              box-sizing: border-box;
              color: #c8c6c4;
              cursor: default;
              display: inline-flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 32px;
              justify-content: center;
              outline: transparent;
              padding-bottom: 0;
              padding-left: 4px;
              padding-right: 4px;
              padding-top: 0;
              position: relative;
              text-align: center;
              text-decoration: none;
              user-select: none;
              width: 32px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            :host(.ms-Fabric--isFocusVisible) &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > span {
              left: 0px;
              position: relative;
              top: 0px;
            }
            &:hover {
              outline: 0px;
            }
            &:focus {
              outline: 0px;
            }
        data-is-focusable="false"
        disabled=""
        type="button"
      >
        <span
          class=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden="true"
            class=
                ms-Icon
                ms-Button-icon
                {
                  display: inline-block;
                  text-decoration: inherit;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons-8";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  color: #a19f9d;
                  flex-shrink: 0;
                  font-size: 16px;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0;
                  margin-left: 4px;
                  margin-right: 4px;
                  margin-top: 0;
                  text-align: center;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                  color: GrayText;
                }
            data-icon-name="CaretSolidLeft"
            style="font-family: \\"FabricMDL2Icons-8\\";"
          >
            
          </i>
        </span>
      </button>
      <div
        hidden=""
        id="tooltip4"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      >
        previous page
      </div>
    </div>
    <button
      aria-checked="true"
      aria-label="page 1 of 10 selected"
      class=
          ms-Button
          ms-Pagination-pageNumber
          ms-Button--default
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            align-items: center;
            background-color: transparent;
            border-radius: 2px;
            border: none;
            box-sizing: border-box;
            color: #000000;
            cursor: pointer;
            display: inline-flex;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            justify-content: center;
            min-height: 32px;
            min-width: 32px;
            outline: transparent;
            padding-bottom: 0;
            padding-left: 16px;
            padding-right: 16px;
            padding-top: 0;
            position: relative;
            text-align: center;
            text-decoration: none;
            user-select: none;
            vertical-align: middle;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          &:active > span {
            left: 0px;
            position: relative;
            top: 0px;
          }
          &[aria-selected=true] {
            color: #0078d4;
            cursor: default;
            font-weight: bold;
            text-decoration: underline;
          }
          &:hover[aria-selected=true] {
            background-color: transparent;
            color: #0078d4;
          }
          &:active {
            background-color: #edebe9;
            color: #201f1e;
          }
          &:hover {
            background-color: #f3f2f1;
            color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
            border-color: Highlight;
            color: Highlight;
          }
      data-is-focusable="true"
      role="radio"
      type="button"
    >
      <span
        class=
            ms-Button-flexContainer
            {
              align-items: center;
              display: flex;
              flex-wrap: nowrap;
              height: 100%;
              justify-content: center;
            }
        data-automationid="splitbuttonprimary"
      >
        1
      </span>
    </button>
    <button
      aria-checked="false"
      aria-label="page 2 of 10"
      class=
          ms-Button
          ms-Pagination-pageNumber
          ms-Button--default
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            align-items: center;
            background-color: transparent;
            border-radius: 2px;
            border: none;
            box-sizing: border-box;
            color: #000000;
            cursor: pointer;
            display: inline-flex;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            justify-content: center;
            min-height: 32px;
            min-width: 32px;
            outline: transparent;
            padding-bottom: 0;
            padding-left: 16px;
            padding-right: 16px;
            padding-top: 0;
            position: relative;
            text-align: center;
            text-decoration: none;
            user-select: none;
            vertical-align: middle;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          &:active > span {
            left: 0px;
            position: relative;
            top: 0px;
          }
          &[aria-selected=true] {
            color: #0078d4;
            cursor: default;
            font-weight: bold;
            text-decoration: underline;
          }
          &:hover[aria-selected=true] {
            background-color: transparent;
            color: #0078d4;
          }
          &:active {
            background-color: #edebe9;
            color: #201f1e;
          }
          &:hover {
            background-color: #f3f2f1;
            color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
            border-color: Highlight;
            color: Highlight;
          }
      data-is-focusable="true"
      role="radio"
      type="button"
    >
      <span
        class=
            ms-Button-flexContainer
            {
              align-items: center;
              display: flex;
              flex-wrap: nowrap;
              height: 100%;
              justify-content: center;
            }
        data-automationid="splitbuttonprimary"
      >
        2
      </span>
    </button>
    <button
      aria-checked="false"
      aria-label="page 3 of 10"
      class=
          ms-Button
          ms-Pagination-pageNumber
          ms-Button--default
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            align-items: center;
            background-color: transparent;
            border-radius: 2px;
            border: none;
            box-sizing: border-box;
            color: #000000;
            cursor: pointer;
            display: inline-flex;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            justify-content: center;
            min-height: 32px;
            min-width: 32px;
            outline: transparent;
            padding-bottom: 0;
            padding-left: 16px;
            padding-right: 16px;
            padding-top: 0;
            position: relative;
            text-align: center;
            text-decoration: none;
            user-select: none;
            vertical-align: middle;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          &:active > span {
            left: 0px;
            position: relative;
            top: 0px;
          }
          &[aria-selected=true] {
            color: #0078d4;
            cursor: default;
            font-weight: bold;
            text-decoration: underline;
          }
          &:hover[aria-selected=true] {
            background-color: transparent;
            color: #0078d4;
          }
          &:active {
            background-color: #edebe9;
            color: #201f1e;
          }
          &:hover {
            background-color: #f3f2f1;
            color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
            border-color: Highlight;
            color: Highlight;
          }
      data-is-focusable="true"
      role="radio"
      type="button"
    >
      <span
        class=
            ms-Button-flexContainer
            {
              align-items: center;
              display: flex;
              flex-wrap: nowrap;
              height: 100%;
              justify-content: center;
            }
        data-automationid="splitbuttonprimary"
      >
        3
      </span>
    </button>
    <button
      aria-checked="false"
      aria-label="page 4 of 10"
      class=
          ms-Button
          ms-Pagination-pageNumber
          ms-Button--default
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            align-items: center;
            background-color: transparent;
            border-radius: 2px;
            border: none;
            box-sizing: border-box;
            color: #000000;
            cursor: pointer;
            display: inline-flex;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            justify-content: center;
            min-height: 32px;
            min-width: 32px;
            outline: transparent;
            padding-bottom: 0;
            padding-left: 16px;
            padding-right: 16px;
            padding-top: 0;
            position: relative;
            text-align: center;
            text-decoration: none;
            user-select: none;
            vertical-align: middle;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          &:active > span {
            left: 0px;
            position: relative;
            top: 0px;
          }
          &[aria-selected=true] {
            color: #0078d4;
            cursor: default;
            font-weight: bold;
            text-decoration: underline;
          }
          &:hover[aria-selected=true] {
            background-color: transparent;
            color: #0078d4;
          }
          &:active {
            background-color: #edebe9;
            color: #201f1e;
          }
          &:hover {
            background-color: #f3f2f1;
            color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
            border-color: Highlight;
            color: Highlight;
          }
      data-is-focusable="true"
      role="radio"
      type="button"
    >
      <span
        class=
            ms-Button-flexContainer
            {
              align-items: center;
              display: flex;
              flex-wrap: nowrap;
              height: 100%;
              justify-content: center;
            }
        data-automationid="splitbuttonprimary"
      >
        4
      </span>
    </button>
    <button
      aria-checked="false"
      aria-label="page 5 of 10"
      class=
          ms-Button
          ms-Pagination-pageNumber
          ms-Button--default
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            align-items: center;
            background-color: transparent;
            border-radius: 2px;
            border: none;
            box-sizing: border-box;
            color: #000000;
            cursor: pointer;
            display: inline-flex;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            justify-content: center;
            min-height: 32px;
            min-width: 32px;
            outline: transparent;
            padding-bottom: 0;
            padding-left: 16px;
            padding-right: 16px;
            padding-top: 0;
            position: relative;
            text-align: center;
            text-decoration: none;
            user-select: none;
            vertical-align: middle;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          &:active > span {
            left: 0px;
            position: relative;
            top: 0px;
          }
          &[aria-selected=true] {
            color: #0078d4;
            cursor: default;
            font-weight: bold;
            text-decoration: underline;
          }
          &:hover[aria-selected=true] {
            background-color: transparent;
            color: #0078d4;
          }
          &:active {
            background-color: #edebe9;
            color: #201f1e;
          }
          &:hover {
            background-color: #f3f2f1;
            color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
            border-color: Highlight;
            color: Highlight;
          }
      data-is-focusable="true"
      role="radio"
      type="button"
    >
      <span
        class=
            ms-Button-flexContainer
            {
              align-items: center;
              display: flex;
              flex-wrap: nowrap;
              height: 100%;
              justify-content: center;
            }
        data-automationid="splitbuttonprimary"
      >
        5
      </span>
    </button>
    <div
      class=
          ms-TooltipHost
          {
            display: inline;
          }
      role="none"
    >
      <button
        aria-label="next page"
        class=
            ms-Button
            ms-Button--icon
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              border-radius: 2px;
              border: none;
              box-sizing: border-box;
              color: #0078d4;
              cursor: pointer;
              display: inline-flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 32px;
              justify-content: center;
              outline: transparent;
              padding-bottom: 0;
              padding-left: 4px;
              padding-right: 4px;
              padding-top: 0;
              position: relative;
              text-align: center;
              text-decoration: none;
              user-select: none;
              width: 32px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            :host(.ms-Fabric--isFocusVisible) &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > span {
              left: 0px;
              position: relative;
              top: 0px;
            }
            &:hover {
              background-color: #f3f2f1;
              color: #106ebe;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
              border-color: Highlight;
              color: Highlight;
            }
            &:active {
              background-color: #edebe9;
              color: #005a9e;
            }
        data-is-focusable="true"
        type="button"
      >
        <span
          class=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden="true"
            class=
                ms-Icon
                ms-Button-icon
                {
                  display: inline-block;
                  text-decoration: inherit;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons-8";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  color: #0078d4;
                  flex-shrink: 0;
                  font-size: 16px;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0;
                  margin-left: 4px;
                  margin-right: 4px;
                  margin-top: 0;
                  text-align: center;
                }
            data-icon-name="CaretSolidRight"
            style="font-family: \\"FabricMDL2Icons-8\\";"
          >
            
          </i>
        </span>
      </button>
      <div
        hidden=""
        id="tooltip23"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      >
        next page
      </div>
    </div>
    <div
      class=
          ms-TooltipHost
          {
            display: inline;
          }
      role="none"
    >
      <button
        aria-label="last page"
        class=
            ms-Button
            ms-Button--icon
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              border-radius: 2px;
              border: none;
              box-sizing: border-box;
              color: #0078d4;
              cursor: pointer;
              display: inline-flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 32px;
              justify-content: center;
              outline: transparent;
              padding-bottom: 0;
              padding-left: 4px;
              padding-right: 4px;
              padding-top: 0;
              position: relative;
              text-align: center;
              text-decoration: none;
              user-select: none;
              width: 32px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            :host(.ms-Fabric--isFocusVisible) &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > span {
              left: 0px;
              position: relative;
              top: 0px;
            }
            &:hover {
              background-color: #f3f2f1;
              color: #106ebe;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
              border-color: Highlight;
              color: Highlight;
            }
            &:active {
              background-color: #edebe9;
              color: #005a9e;
            }
        data-is-focusable="true"
        type="button"
      >
        <span
          class=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden="true"
            class=
                ms-Icon
                ms-Button-icon
                {
                  display: inline-block;
                  text-decoration: inherit;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons-1";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  color: #0078d4;
                  flex-shrink: 0;
                  font-size: 16px;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0;
                  margin-left: 4px;
                  margin-right: 4px;
                  margin-top: 0;
                  text-align: center;
                }
            data-icon-name="Next"
            style="font-family: \\"FabricMDL2Icons-1\\";"
          >
            
          </i>
        </span>
      </button>
      <div
        hidden=""
        id="tooltip27"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      >
        page 10
      </div>
    </div>
  </div>
  <div
    aria-label="1 - 10 of 268"
    class=

        {
          color: #605e5c;
        }
  >
    1 - 10 of 268
  </div>
</div>
`;

exports[`Pagination render comboBox Pagination correctly 1`] = `
<div
  class="ms-Pagination-container"
>
  <button
    aria-disabled="true"
    aria-label="first page"
    class=
        ms-Button
        ms-Button--icon
        is-disabled
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: #f3f2f1;
          border-color: #f3f2f1;
          border-radius: 2px;
          border: none;
          box-sizing: border-box;
          color: #c8c6c4;
          cursor: default;
          display: inline-flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 32px;
          justify-content: center;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          width: 32px;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        :host(.ms-Fabric--isFocusVisible) &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        &:active > span {
          left: 0px;
          position: relative;
          top: 0px;
        }
        &:hover {
          outline: 0px;
        }
        &:focus {
          outline: 0px;
        }
    data-is-focusable="false"
    disabled=""
    type="button"
  >
    <span
      class=
          ms-Button-flexContainer
          {
            align-items: center;
            display: flex;
            flex-wrap: nowrap;
            height: 100%;
            justify-content: center;
          }
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden="true"
        class=
            ms-Icon
            ms-Button-icon
            {
              display: inline-block;
              text-decoration: inherit;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              font-family: "FabricMDL2Icons-1";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            {
              color: #a19f9d;
              flex-shrink: 0;
              font-size: 16px;
              height: 16px;
              line-height: 16px;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
              text-align: center;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              color: GrayText;
            }
        data-icon-name="Previous"
        style="font-family: \\"FabricMDL2Icons-1\\";"
      >
        
      </i>
    </span>
  </button>
  <button
    aria-disabled="true"
    aria-label="previous page"
    class=
        ms-Button
        ms-Button--icon
        is-disabled
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: #f3f2f1;
          border-color: #f3f2f1;
          border-radius: 2px;
          border: none;
          box-sizing: border-box;
          color: #c8c6c4;
          cursor: default;
          display: inline-flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 32px;
          justify-content: center;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          width: 32px;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        :host(.ms-Fabric--isFocusVisible) &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        &:active > span {
          left: 0px;
          position: relative;
          top: 0px;
        }
        &:hover {
          outline: 0px;
        }
        &:focus {
          outline: 0px;
        }
    data-is-focusable="false"
    disabled=""
    type="button"
  >
    <span
      class=
          ms-Button-flexContainer
          {
            align-items: center;
            display: flex;
            flex-wrap: nowrap;
            height: 100%;
            justify-content: center;
          }
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden="true"
        class=
            ms-Icon
            ms-Button-icon
            {
              display: inline-block;
              text-decoration: inherit;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              font-family: "FabricMDL2Icons-8";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            {
              color: #a19f9d;
              flex-shrink: 0;
              font-size: 16px;
              height: 16px;
              line-height: 16px;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
              text-align: center;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              color: GrayText;
            }
        data-icon-name="CaretSolidLeft"
        style="font-family: \\"FabricMDL2Icons-8\\";"
      >
        
      </i>
    </span>
  </button>
  <div
    class=
        ms-ComboBox-container
        {
          display: inline-block;
          max-width: 70px;
          vertical-align: middle;
        }
  >
    <div
      class=
          ms-ComboBox
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            background-color: #ffffff;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            cursor: text;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: 32px;
            margin-left: 0;
            outline: 0;
            padding-left: 9px;
            padding-right: 32px;
            position: relative;
            text-overflow: ellipsis;
            user-select: none;
            white-space: nowrap;
          }
          & .ms-Label {
            display: inline-block;
            margin-bottom: 8px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&.is-open {
            -ms-high-contrast-adjust: none;
            background-color: Window;
            color: HighlightText;
            forced-color-adjust: none;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&.is-open:after {
            border-color: Highlight;
          }
          &:after {
            border-color: #605e5c;
            border-radius: 2px;
            border-style: solid;
            border-width: 1px;
            bottom: 0px;
            content: '';
            left: 0px;
            pointer-events: none;
            position: absolute;
            right: 0px;
            top: 0px;
          }
          &:hover:after {
            border-color: #323130;
          }
          &:hover .ms-ComboBox-Input {
            color: #201f1e;
          }
          &:hover .ms-ComboBox-Input::placeholder {
            color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover .ms-ComboBox-Input::placeholder {
            color: GrayText;
          }
          &:hover .ms-ComboBox-Input:-ms-input-placeholder {
            color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover .ms-ComboBox-Input:-ms-input-placeholder {
            color: GrayText;
          }
          &:hover .ms-ComboBox-Input::-ms-input-placeholder {
            color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover .ms-ComboBox-Input::-ms-input-placeholder {
            color: GrayText;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover .ms-ComboBox-Input {
            -ms-high-contrast-adjust: none;
            background-color: Window;
            color: WindowText;
            forced-color-adjust: none;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
            -ms-high-contrast-adjust: none;
            background-color: Window;
            color: HighlightText;
            forced-color-adjust: none;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover:after {
            border-color: Highlight;
          }
          &:active {
            position: relative;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:active {
            -ms-high-contrast-adjust: none;
            background-color: Window;
            color: HighlightText;
            forced-color-adjust: none;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:active:after {
            border-color: Highlight;
          }
          &:focus {
            border-color: #0078d4;
          }
          &:focus .ms-ComboBox-Input {
            color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:focus .ms-ComboBox-Input {
            -ms-high-contrast-adjust: none;
            background-color: Window;
            color: WindowText;
            forced-color-adjust: none;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:focus {
            -ms-high-contrast-adjust: none;
            background-color: Window;
            color: HighlightText;
            forced-color-adjust: none;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:focus:after {
            border-color: Highlight;
          }
          &:focus:after {
            border-radius: 2px;
            border: 2px solid #0078d4;
            bottom: 0px;
            content: '';
            left: 0px;
            pointer-events: none;
            position: absolute;
            right: 0px;
            top: 0px;
          }
      data-ktp-target="true"
      id="ComboBox6wrapper"
    >
      <input
        aria-autocomplete="both"
        aria-expanded="false"
        aria-invalid="false"
        autocapitalize="off"
        autocomplete="off"
        class=
            ms-ComboBox-Input
            {
              background-color: #ffffff;
              border-style: none;
              box-sizing: border-box;
              color: #323130;
              font: inherit;
              height: 100%;
              outline: none;
              padding-bottom: 0;
              padding-left: 0;
              padding-right: 0;
              padding-top: 0;
              text-overflow: ellipsis;
              width: 100%;
            }
            &::placeholder {
              color: #605e5c;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&::placeholder {
              color: GrayText;
            }
            &:-ms-input-placeholder {
              color: #605e5c;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:-ms-input-placeholder {
              color: GrayText;
            }
            &::-ms-input-placeholder {
              color: #605e5c;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&::-ms-input-placeholder {
              color: GrayText;
            }
            &::-ms-clear {
              display: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              background-color: Window;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-is-interactable="true"
        data-ktp-execute-target="true"
        data-lpignore="true"
        id="ComboBox6-input"
        role="combobox"
        spellcheck="false"
        style="font-family: inherit;"
        type="text"
        value="1"
      />
      <button
        class=
            ms-Button
            ms-Button--icon
            ms-ComboBox-CaretDown-button
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              border-radius: 2px;
              border: none;
              box-sizing: border-box;
              color: #605e5c;
              cursor: default;
              display: inline-flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              height: 100%;
              justify-content: center;
              line-height: 30px;
              outline: transparent;
              padding-bottom: 0;
              padding-left: 4px;
              padding-right: 4px;
              padding-top: 0;
              position: absolute;
              text-align: center;
              text-decoration: none;
              top: 0px;
              user-select: none;
              width: 32px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            :host(.ms-Fabric--isFocusVisible) &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > span {
              left: 0px;
              position: relative;
              top: 0px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              background-color: ButtonFace;
              border-color: ButtonText;
              color: ButtonText;
              forced-color-adjust: none;
            }
            &:hover {
              background-color: #f3f2f1;
              color: #201f1e;
              cursor: pointer;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
              -ms-high-contrast-adjust: none;
              background-color: Highlight;
              border-color: Highlight;
              color: HighlightText;
              forced-color-adjust: none;
            }
            &:active {
              background-color: #edebe9;
              color: #201f1e;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:active {
              -ms-high-contrast-adjust: none;
              background-color: Highlight;
              border-color: Highlight;
              color: HighlightText;
              forced-color-adjust: none;
            }
        data-is-focusable="false"
        tabindex="-1"
        type="button"
      >
        <span
          class=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden="true"
            class=
                ms-Icon
                ms-Button-icon
                {
                  display: inline-block;
                  text-decoration: inherit;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  flex-shrink: 0;
                  font-size: 12px;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0;
                  margin-left: 4px;
                  margin-right: 4px;
                  margin-top: 0;
                  text-align: center;
                }
            data-icon-name="ChevronDown"
            style="font-family: \\"FabricMDL2Icons\\";"
          >
            
          </i>
        </span>
      </button>
    </div>
  </div>
  <button
    aria-label="next page"
    class=
        ms-Button
        ms-Button--icon
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: transparent;
          border-radius: 2px;
          border: none;
          box-sizing: border-box;
          color: #0078d4;
          cursor: pointer;
          display: inline-flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 32px;
          justify-content: center;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          width: 32px;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        :host(.ms-Fabric--isFocusVisible) &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        &:active > span {
          left: 0px;
          position: relative;
          top: 0px;
        }
        &:hover {
          background-color: #f3f2f1;
          color: #106ebe;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
          border-color: Highlight;
          color: Highlight;
        }
        &:active {
          background-color: #edebe9;
          color: #005a9e;
        }
    data-is-focusable="true"
    type="button"
  >
    <span
      class=
          ms-Button-flexContainer
          {
            align-items: center;
            display: flex;
            flex-wrap: nowrap;
            height: 100%;
            justify-content: center;
          }
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden="true"
        class=
            ms-Icon
            ms-Button-icon
            {
              display: inline-block;
              text-decoration: inherit;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              font-family: "FabricMDL2Icons-8";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            {
              flex-shrink: 0;
              font-size: 16px;
              height: 16px;
              line-height: 16px;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
              text-align: center;
            }
        data-icon-name="CaretSolidRight"
        style="font-family: \\"FabricMDL2Icons-8\\";"
      >
        
      </i>
    </span>
  </button>
  <button
    aria-label="last page"
    class=
        ms-Button
        ms-Button--icon
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: transparent;
          border-radius: 2px;
          border: none;
          box-sizing: border-box;
          color: #0078d4;
          cursor: pointer;
          display: inline-flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 32px;
          justify-content: center;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          width: 32px;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        :host(.ms-Fabric--isFocusVisible) &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        &:active > span {
          left: 0px;
          position: relative;
          top: 0px;
        }
        &:hover {
          background-color: #f3f2f1;
          color: #106ebe;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
          border-color: Highlight;
          color: Highlight;
        }
        &:active {
          background-color: #edebe9;
          color: #005a9e;
        }
    data-is-focusable="true"
    type="button"
  >
    <span
      class=
          ms-Button-flexContainer
          {
            align-items: center;
            display: flex;
            flex-wrap: nowrap;
            height: 100%;
            justify-content: center;
          }
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden="true"
        class=
            ms-Icon
            ms-Button-icon
            {
              display: inline-block;
              text-decoration: inherit;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              font-family: "FabricMDL2Icons-1";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            {
              flex-shrink: 0;
              font-size: 16px;
              height: 16px;
              line-height: 16px;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
              text-align: center;
            }
        data-icon-name="Next"
        style="font-family: \\"FabricMDL2Icons-1\\";"
      >
        
      </i>
    </span>
  </button>
</div>
`;
